# DataLoggerHeating_Luxtronik

./: .gitignore  CMakeLists.txt  README.md  ReleaseNotes.html  doxyfile  makefile  uncr.cfg
Analyze/scripts/: avgBlockTime.gnuplot  avgBlockTime.py  avgBlockTime.sh  blockTime.gnuplot  blockTime.py  blockTime.sh  blockTimeDensity.gnuplot
Common/: doxyfile  uncr.cfg
Common/scripts/: showSW_Version.sh
Common/src/: BitBuffer.cpp  BitBuffer.hpp  CommonTypeDefs.hpp  FeedbackCollector.cpp  FeedbackCollector.hpp  IP_AddressValidator.cpp  IP_AddressValidator.hpp  IValueTable.hpp  ProgramVersion.cpp  ProgramVersion.hpp  ValueTable.cpp  ValueTable.hpp  ValueTableCommon.cpp  ValueTableCommon.hpp  ValueTable_v1.cpp  ValueTable_v1.hpp  ValueTable_v2.cpp  ValueTable_v2.hpp  ValueTable_v3.cpp  ValueTable_v3.hpp  ValueTable_v4.cpp  ValueTable_v4.hpp
DataDecoder/: CMakeLists.txt
DataDecoder/scripts/: clean.sh  makeDocu.sh  uncr.sh
DataDecoder/src/: DataDecoder_main.cpp  FileDataReader.cpp  FileDataReader.hpp  FileDataWriterCSV.cpp  FileDataWriterCSV.hpp  IFileDataWriterCSV.hpp
HeatingData/: README.md
MonitorHeating/: CMakeLists.txt
MonitorHeating/scripts/: clean.sh  makeDocu.sh  startEmacs.sh  uncr.sh
MonitorHeating/src/: HeatingData_main.cpp  MonitorHeating_main.cpp  ReceiveDataBuffer.cpp  ReceiveDataBuffer.hpp  SynchronizeTime.cpp  SynchronizeTime.hpp  TcpConnection.cpp  TcpConnection.hpp  ValueResponse.cpp  ValueResponse.hpp  influxdb.hpp
OctaveScripts/: InputWaterTemperature.m  ReadAndPlotCSV.m  WarmwaterVsBlocktime.m  analyzeDate.m  findIndexFromName.m
Test/: CMakeLists.txt
Test/scripts/: build.sh  uncr.sh
Test/src/: Test_BitBuffer.cpp  Test_Dummy.cpp  Test_FeedbackCollector.cpp  Test_FileDataReader.cpp  Test_IpAddressValidator.cpp  Test_influxdb.cpp
Utils/: CMakeLists.txt  influxDB_sampleCommands.sh  testPushToInfluxDB.sh
Utils/scripts/: clean.sh  makeDocu.sh
Utils/src/: testConvertTime.cpp
scripts/: backupDataToNAS.sh  build.sh  buildAndTest.sh  clean.sh  convertAll.sh  getDataFromNas.sh  getGoogleTest.sh  makeDocu.sh  monitorHeating.sh  monitorHeating_internal.sh  runMonitorHeatingWithGivenUser.sh  run_heating_monitor  startEmacs.sh  uncr.sh
src/: Command3004.cpp  Command3004.hpp  HeatingData_main.cpp  ReceiveDataBuffer.cpp  ReceiveDataBuffer.hpp  SynchronizeTime.cpp  SynchronizeTime.hpp  TcpConnection.cpp  TcpConnection.hpp  ValueResponse.cpp  ValueResponse.hpp  tcp.cpp  tcp.cpp.back
utils/scripts/: makeDocu.sh
